--- a/captcha/locale/de/LC_MESSAGES/django.po
+++ b/captcha/locale/de/LC_MESSAGES/django.po
@@ -8,17 +8,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: django-recaptcha 1.4.0\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2018-12-19 19:29+0100\n"
+"POT-Creation-Date: 2018-12-19 22:38+0100\n"
 "PO-Revision-Date: 2018-12-19 20:12+0100\n"
+"Last-Translator: \n"
 "Language: de\n"
 "Language-Team: de <LL@li.org>\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.6.0\n"
-"Last-Translator: \n"
-"X-Generator: Poedit 2.2\n"
 
 #: captcha/fields.py:18
 msgid "Incorrect, please try again."
@@ -27,3 +26,4 @@ msgstr "Fehlerhaft, bitte versuchen Sie es erneut."
 #: captcha/fields.py:19
 msgid "Error verifying input, please try again."
 msgstr "Fehler bei Verifizierung der Eingabe, bitte versuchen Sie es erneut."
+
