--- a/captcha/locale/es/LC_MESSAGES/django.po
+++ b/captcha/locale/es/LC_MESSAGES/django.po
@@ -1,24 +1,28 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# Copyright (C) 2014 THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2014.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Django-recapcha\n"
+"Project-Id-Version:  Django-recapcha\n"
 "Report-Msgid-Bugs-To: rafadev@gmail.com\n"
-"POT-Creation-Date: 2014-09-05 16:46-0300\n"
+"POT-Creation-Date: 2018-12-19 22:38+0100\n"
 "PO-Revision-Date: 2014-09-15 16:47-0300\n"
 "Last-Translator: Rafael Ponieman <rafadev@gmail.com>\n"
-"Language-Team: \n"
 "Language: Spanish\n"
+"Language-Team: \n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
-"X-Generator: Poedit 1.5.4\n"
+"Generated-By: Babel 2.6.0\n"
 
-#: fields.py:19
+#: captcha/fields.py:18
 msgid "Incorrect, please try again."
 msgstr "Incorrecto, por favor intente nuevamente."
+
+#: captcha/fields.py:19
+#, fuzzy
+msgid "Error verifying input, please try again."
+msgstr "Incorrecto, por favor intente nuevamente."
+
