--- a/captcha/locale/pl/LC_MESSAGES/django.po
+++ b/captcha/locale/pl/LC_MESSAGES/django.po
@@ -1,28 +1,28 @@
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# Copyright (C) 2015 THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 #
 # , 2015.
 msgid ""
 msgstr ""
-"Project-Id-Version: Django-recaptcha\n"
+"Project-Id-Version:  Django-recaptcha\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-03-29 15:12+0200\n"
+"POT-Creation-Date: 2018-12-19 22:38+0100\n"
 "PO-Revision-Date: 2015-03-29 15:13+0200\n"
 "Last-Translator: \n"
-"Language-Team: pbf <admin@pbf.net.pl>\n"
 "Language: pl\n"
+"Language-Team: pbf <admin@pbf.net.pl>\n"
+"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && "
+"(n%100<10 || n%100>=20) ? 1 : 2)\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
-"|| n%100>=20) ? 1 : 2);\n"
-"X-Generator: Lokalize 1.5\n"
+"Generated-By: Babel 2.6.0\n"
 
-#: fields.py:21
+#: captcha/fields.py:18
 msgid "Incorrect, please try again."
 msgstr "Pomyłka, spróbuj jeszcze raz."
 
-#: fields.py:22
+#: captcha/fields.py:19
 msgid "Error verifying input, please try again."
 msgstr "Błąd podczas weryfikacji, spróbuj jeszcze raz."
 
