--- a/captcha/locale/zh_TW/LC_MESSAGES/django.po
+++ b/captcha/locale/zh_TW/LC_MESSAGES/django.po
@@ -1,21 +1,24 @@
+
 msgid ""
 msgstr ""
-"Project-Id-Version: django-recaptcha\n"
+"Project-Id-Version:  django-recaptcha\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-05-28 10:28-0400\n"
+"POT-Creation-Date: 2018-12-19 22:38+0100\n"
 "PO-Revision-Date: 2015-05-28 10:28-0400\n"
 "Last-Translator: Kevin Zhang <kevin@kevinzhang.me>\n"
-"Language-Team: Kevin Zhang <kevin@kevinzhang.me>\n"
 "Language: zh_TW\n"
+"Language-Team: Kevin Zhang <kevin@kevinzhang.me>\n"
+"Plural-Forms: nplurals=1; plural=0\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=1; plural=0;\n"
+"Generated-By: Babel 2.6.0\n"
 
-#: fields.py:21
+#: captcha/fields.py:18
 msgid "Incorrect, please try again."
 msgstr "不正確，請重試。"
 
-#: fields.py:22
+#: captcha/fields.py:19
 msgid "Error verifying input, please try again."
 msgstr "無法驗證輸入，請重試。"
+
